infra/k8s/auth-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deploy
spec:
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: mvcorsi/auth-service
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
