infra/k8s/order-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deploy
spec:
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
      - name: order
        image: mvcorsi/order-service
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: order
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
