infra/k8s/order-mongo-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-mongo-deploy
spec:
  selector:
    matchLabels:
      app: order-mongo
  template:
    metadata:
      labels:
        app: order-mongo
    spec:
      containers:
      - name: order-mongo
        image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: order-mongo-service
spec:
  selector:
    app: order-mongo
  ports:
  - name: db
    protocol: TCP
    port: 27017
    targetPort: 27017
