infra/k8s/payment-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-deploy
spec:
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
      - name: payment
        image: mvcorsi/payment-service
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
spec:
  selector:
    app: payment
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
