infra/k8s/payment-mongo-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-mongo-deploy
spec:
  selector:
    matchLabels:
      app: payment-mongo
  template:
    metadata:
      labels:
        app: payment-mongo
    spec:
      containers:
      - name: payment-mongo
        image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: payment-mongo-service
spec:
  selector:
    app: payment-mongo
  ports:
  - name: db
    protocol: TCP
    port: 27017
    targetPort: 27017
